byoh-stage-reference/tks-admin-tools/keycloak/Ingress_keycloak.yaml
# Source: keycloak/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: "keycloak"
  labels:
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-15.1.6
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: keycloak
  annotations:
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    virtual-server.f5.com/clientssl: '[ { "hosts": [ "skbroadband.com" ], "bigIpProfile":
      "/Common/skbroadband" } ]'
    virtual-server.f5.com/health: |
      [
        {
          "path":     "TO_BE_FIXED",
          "send":     "HTTP GET /",
          "interval": 5,
          "timeout":  10
        }
      ]
    virtual-server.f5.com/ip: TO_BE_FIXED
    virtual-server.f5.com/partition: TO_BE_FIXED
spec:
  ingressClassName: "f5"
  rules:
    - host: "TO_BE_FIXED"
      http:
        paths:
          - path: /auth/
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
